Bug Id: 9567. Breakage: Css issue in external transfer. Australian number address form not showing issue. Fixed.

--- a/public/src/freshfone/client/_ongoing.scss
+++ b/public/src/freshfone/client/_ongoing.scss
@@ -214,6 +214,13 @@
   		text-align: center;
 		}
 	}
+	.no_available_numbers {
+		font-size: 14px;
+		@include padding(45px 0 10px);
+		font-weight: 400;
+  	padding: 20px 10px 10px;
+  	text-align: center;
+	}
 //	transfer call ends
 
 // Call notes starts
